--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://erictang398.github.io/erictang398.github.io",
+  "homepage": "https://erictang398.github.io/react-portfolio",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
